Update hospital: SEGUIMOS AVANZANDO PROCESAMIENTO CLASE

--- a/clase-2309.html
+++ b/clase-2309.html
@@ -60,6 +60,17 @@
     </div>
 
 
+    <div id="parent1-id">
+        <p>hello world 1</p>
+        <p class="testInner">hello world 2</p>
+        <p class="testInner">hello world 2</p>
+        <p myAttribute="Attribute1" class="testInner">hello world 2</p>
+        <p>hello world 3</p>
+        <p>hello world 4</p>
+        <p>hello world 5</p>
+        <p>hello world 6</p>
+    </div>
+
 <script type="module" src="clase-2309.js"></script>
 
 </body>
