Update hospital. Seguimos avanzando en el proceso de clase 23-09, ya estamos en el 5/8 sections

--- a/clase-2309.html
+++ b/clase-2309.html
@@ -62,7 +62,7 @@
 
     <div id="parent1-id">
         <p>hello world 1</p>
-        <p class="testInner">hello world 2</p>
+        <p class="testInner" name="first-parrafo">hello world 2</p>
         <p class="testInner">hello world 2</p>
         <p myAttribute="Attribute1" class="testInner">hello world 2</p>
         <p>hello world 3</p>
