Update rapido de repo de clase

--- a/clase-2309.html
+++ b/clase-2309.html
@@ -67,7 +67,7 @@
         <p myAttribute="Attribute1" class="testInner">hello world 2</p>
         <p>hello world 3</p>
         <p>hello world 4</p>
-        <p>hello world 5</p>
+        <p>hello asdasdasdworld 5</p>
         <p>hello world 6</p>
     </div>
 
@@ -92,7 +92,7 @@
         </button>
         
         
-        <label>
+        <label style="display: block">
             Introduce tu nombre
             <input type="text" placeholder="Escribe tu nombre aquí...">
         </label>
