Update: FIN PROCESO CLASS

--- a/clase-2309.html
+++ b/clase-2309.html
@@ -103,6 +103,19 @@
         
     </div>
 
+    <div>
+    <button id="printEventObject" class="classButton" type="button">
+        Pulsa Aquí para printear el Event Object (e)
+    </button>
+    <br>
+    <ul id="listPruebaPaObject">
+        <li>li 1</li>
+        <li>li 2</li>
+        <li>li 3</li>
+        <li>li 4</li>
+    </ul>
+    </div>
+
 <script type="module" src="clase-2309.js"></script>
 
 </body>
